[package]
name = "lesspm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.10"
u2f = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
