[package]
name = "lesspm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.10"
u2f = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
jsonwebtoken = "8.2.0"
tower-http = { version = "0.4.0", features = ["cors"] }
chrono = "0.4.23"
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
axum-server = { version = "0.4.6", features = ["tls-rustls"] }
mongodb = "2.4.0"
rand = "0.8.5"
ring = "0.16.20"
base64 = "0.21.0"
anyhow = "1.0.69"
tokio-stream = "0.1.12"
regex = "1.7.1"
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
